# limez

./: AUTHORS  CHANGELOG  INSTALL  Makefile.am  Makefile.dist  Makefile.in  README  TODO  config.h.in  configure  configure.in  install_limez.sh  limez.kdevprj
admin/: blank.html  changeconf.php  changeuser.php  config.php  dellist.php  describekey.php  doc.ini  editsender.php  edituser.php  error.php  format.css  idx.html  index.html  info.php  left.php  limez.ini  limezformate.css  newlist.php  newlistcheck.php  reload.php  showkeys.php  status.php
scripts/: conf.sh  conf_ldap.sh  conf_ldap2.sh  conf_ldap_mysql.sh  conf_msql.sh  conf_msql3.sh  conf_mysql.sh  conf_postgres.sh  limez.server  limezgate  start  strip_tabs.sh
src/: Makefile.am  Makefile.in  address.cc  address_def.h  address_inl.h  config.cc  config_def.h  connection.cc  connection_def.h  connection_inl.h  database.cc  database_def.h  datablock.cc  datablock_def.h  datablock_inl.h  dbstorage.cc  dbstorage_def.h  filestorage.cc  filestorage_def.h  generator.cc  generator_def.h  global.h  keyvalue.cc  keyvalue_def.h  keyvalue_inl.h  ldapstorage.cc  ldapstorage_def.h  lightdir.cc  lightdir_def.h  limez.config  line.cc  line_def.h  list_def.h  list_inl.h  listelement_def.h  listelement_inl.h  log.cc  log_def.h  log_inl.h  mailinglist.cc  (+32 more)
src/docs/: Makefile  Makefile.in
src/docs/en/: Makefile  Makefile.in
src/include/: Makefile  Makefile.am  Makefile.in
src/lists/test/: config  footer  goodbye  header  user  welcome
