dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)
AC_LANG_CPLUSPLUS

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(limez,0.682)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

dnl test for -Wall
AC_MSG_CHECKING([whether the C compiler accepts -Wall])
AC_TRY_COMPILE(,,AC_MSG_RESULT(yes); CPPFLAGS="$CPPFLAGS -Wall",AC_MSG_RESULT(no))

dnl Check for database options
AC_ARG_ENABLE(mysql-db,
  [  --enable-mysql-db       compilation with MySQL database support],
   CPPFLAGS="$CPPFLAGS -DUSE_MYSQL_DB" ; LIBS="$LIBS -lmysqlclient")

AC_ARG_ENABLE(postgres-db,
  [  --enable-postgres-db    with postgreSQL database support],
   CPPFLAGS="$CPPFLAGS -DUSE_POSTGRES_DB" ; LIBS="$LIBS -lpq")

AC_ARG_ENABLE(msql-db,
  [  --enable-msql-db        with Hughes MiniSQL database support (not working)],
   CPPFLAGS="$CPPFLAGS -DUSE_MSQL_DB" ; LIBS="$LIBS -lmsql")

dnl Check for ldap options
AC_ARG_ENABLE(iplanet-ldap,
  [  --enable-iplanet-ldap   with Netscape IPlanet SDK support],
   CPPFLAGS="$CPPFLAGS -DUSE_LDAP" ; LIBS="$LIBS -lnspr3 -lldapssl41 -lplc3 -lplds3")

dnl Check for ldap options
AC_ARG_ENABLE(open-ldap,
  [  --enable-open-ldap      with OpenLDAP support],
   CPPFLAGS="$CPPFLAGS -DUSE_LDAP" ; LIBS="$LIBS -lldap -llber")

dnl Checks for libraries.
AC_CHECK_LIB(resolv,gethostbyname)
AC_CHECK_LIB(resolv,res_search)
AC_CHECK_LIB(nsl,gethostbyname)
AC_CHECK_LIB(socket,socket)

dnl Checks for header files.
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

VERSION=`cat src/global.h | grep "#define VERSION" | sed -e 's/^.*\"\(.*\)\"/\1/'`
AC_OUTPUT(Makefile src/Makefile src/docs/Makefile src/docs/en/Makefile src/include/Makefile )
